--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get:
+  http:
+  flutter_bloc:
+  shared_preferences:
+  sqflite:
+  path:
+  intl:
 
 dev_dependencies:
   flutter_test:
